--- a/package.json
+++ b/package.json
@@ -1,5 +1,14 @@
 {
   "devDependencies": {
-    "sass": "^1.54.9"
+    "sass": "^1.55.0"
+  },
+  "dependencies": {
+    "normalize.css": "^8.0.1",
+    "stylelint": "^14.12.1"
+  },
+  "scripts": {
+    "compile": "sass style.scss style.css",
+    "compile-help":"sass helpers.scss helpers.css",
+    "watch": "sass --watch input.scss output.css"
   }
 }
