changement nom des classes

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "compile": "sass style.scss style.css",
     "compile-help":"sass helpers.scss helpers.css",
-    "watch": "sass --watch style.scss style.css",
-    "watch-help": "sass --watch helpers.scss helpers.css"
+    "watch": "sass --watch style/scss/style.scss style/css/style.css",
+    "watch-help": "sass --watch style/scss/helpers.scss style/css/helpers.css"
   }
 }
